--- a/翻电问答/31 | 在资本主义文化中生活的少数派.md
+++ b/翻电问答/31 | 在资本主义文化中生活的少数派.md
@@ -92,7 +92,7 @@
 
 第二，就是要拥有你自己的语汇和表达，这是对于符号系统的抵抗，对我这个抵抗还是去针对的技术实体符号实体和目的实体。刚才说了要拥有属于你自己的非消费的目的，比如说我现在做电台等等，我的目的当然昭然若揭，那肯定是一个非消费性的目的，这个就是去抵抗目的实体。拥有自己的语汇和表达，就是抵抗的符号实体。基本上也很简单，第一，你抵抗网络流行语和表情包的使用，这是第一点；第二点就即便在母语系统之中，很多人的母语是非常贫乏的，它的中文词汇非常匮乏，现在网络表达就是这种东西，其实词汇量极其极其匮乏，当你自己拥有一个丰富的母语表达的时候，你已经在抵抗这种资本主义文化的符号了，你再用非符号的方式精通自己的母语，母语的使用一定是一个非常重要的技艺，你在精通自己的母语，就已经在反抗这个表达，这是很重要的。当然精通母语的方式绝对不可能通过读来完成。如果一个人想精通自己的母语，就一定要写，而且他肯定不能写成干货文章，大概他要进行文学性的或诗意的表达，是最好的一个人精通自己母语的方式。而我真的认为，通过写作的方式精通母语，是反抗资本主义文化特别重要的一个东西，所以今天这一条可能是最实践性的、最直接的、最实在的一个建议，就是精通自己的母语，以写作的方式精通自己的母语很重要。
 
-第三个，除了这个之外，如果你还要再进一步，你甚至可以反思自己的母语系统，去将自己的母语系统与更深的传统连接。不管是西文传统和中文传统，就是之前节目里我们讲过白话文观念的东西，可能对于整个符号实体就是一个很大的反抗了。第三个对技术实体的反抗，那么你就要做非课程化的实践，你的哪种实践是非科层化的你就要多做。这里面我觉得两种是比较值得说，第一个亲密关系对吧？我们之前一直讲过亲密关系，亲密关系有一个很重要的一点，它就是一种非科层化的实践，像很多人养了孩子，这是一个非科层化的实践。但是，如果你只知道把孩子带去这个班那个班，你跟孩子的关系就是，这个班的老师让你跟孩子要做这个，那个班的老师给你的孩子要做的，我觉得你是连同你的生活和你的孩子的生活一起纳入到一个科层化的实践之中。所以如果你有你自己 original 跟你的孩子的沟通方式，这就是一个非课程化的实践。第二个非科创时间就是非亲密关系的，就是我们在夏令营节目里讲的自我装置，翻转电台就是一个自我装置，从头到尾自己做。当然它也使用一些网络技术，使用了网络平台，使用了别人开发的软件，但实质上比如说它跟抖音比，它的封装程度就要低得多得多，它的科层性质就要小得多，而且我是自己做。所以这个也是一个非课程的实践。因此这种自我装置和你的亲密关系是能够帮助你去抵抗资本主义文化的。所以说如果一个人你要真觉得资本主义文化有问题，那么你要进行亲密关系或自我装置的这种非技术实体的实践，你要去反对使用网络流行语和表情包，就忍住别用，或者说你或者最简单的，其实还是上一期，在我看来，使用这些是一个特别丢人的事，我有特别强的对的本能的觉知。我记得最近有一句话我忘了一句话了，我不得已用了一个流行词还没那么流行，就打那个词的时候，我心里就有点难受，我觉得挺丢脸的使用这些东西。所以如果你有这样的直觉，这就是优越感，他为什么丢脸？因为我竟然在用别人的说话，这太丢人了。我用的不是我自己的语言，而在用别人，而且是别人之间挺火的一个语言说话，这太丢人了，就真的挺丢人的，说实话，如果你有那种自我优越感的话，它就是挺丢人的，它让你变得不是你了，它让你丢失了你的特异性。
+第三个，除了这个之外，如果你还要再进一步，你甚至可以反思自己的母语系统，去将自己的母语系统与更深的传统连接。不管是西文传统和中文传统，就是之前节目里我们讲过白话文观念的东西，可能对于整个符号实体就是一个很大的反抗了。第三个对技术实体的反抗，那么你就要做非科层化的实践，你的哪种实践是非科层化的你就要多做。这里面我觉得两种是比较值得说，第一个亲密关系对吧？我们之前一直讲过亲密关系，亲密关系有一个很重要的一点，它就是一种非科层化的实践，像很多人养了孩子，这是一个非科层化的实践。但是，如果你只知道把孩子带去这个班那个班，你跟孩子的关系就是，这个班的老师让你跟孩子要做这个，那个班的老师给你的孩子要做的，我觉得你是连同你的生活和你的孩子的生活一起纳入到一个科层化的实践之中。所以如果你有你自己 original 跟你的孩子的沟通方式，这就是一个非课程化的实践。第二个非科创时间就是非亲密关系的，就是我们在夏令营节目里讲的自我装置，翻转电台就是一个自我装置，从头到尾自己做。当然它也使用一些网络技术，使用了网络平台，使用了别人开发的软件，但实质上比如说它跟抖音比，它的封装程度就要低得多得多，它的科层性质就要小得多，而且我是自己做。所以这个也是一个非课程的实践。因此这种自我装置和你的亲密关系是能够帮助你去抵抗资本主义文化的。所以说如果一个人你要真觉得资本主义文化有问题，那么你要进行亲密关系或自我装置的这种非技术实体的实践，你要去反对使用网络流行语和表情包，就忍住别用，或者说你或者最简单的，其实还是上一期，在我看来，使用这些是一个特别丢人的事，我有特别强的对的本能的觉知。我记得最近有一句话我忘了一句话了，我不得已用了一个流行词还没那么流行，就打那个词的时候，我心里就有点难受，我觉得挺丢脸的使用这些东西。所以如果你有这样的直觉，这就是优越感，他为什么丢脸？因为我竟然在用别人的说话，这太丢人了。我用的不是我自己的语言，而在用别人，而且是别人之间挺火的一个语言说话，这太丢人了，就真的挺丢人的，说实话，如果你有那种自我优越感的话，它就是挺丢人的，它让你变得不是你了，它让你丢失了你的特异性。
 
 所以说刚才说的非科层实践，这里说的就是不使用流行语和表情包，与你的母语精通你自己的母语。第三点就先不说了，你把这两点做到就已经很好了。我认为，如果刚才我们要说一个人怎么才能够找到属于他自己的非消费性的目的呢？那我就要说你把这两点做到了，我认为你多半会从里面拥有一个属于你的非消费性的目的，可能这个问题也就迎刃而解了。所以抵抗资本主义文化，也大概就是从这几个角度去讲的。
 
